tests/NormalTests/paczka1/fuzzy1/31638064.err
Error in line 3: ID7pgy A228 37,0
Error in line 6: JzWhl S926 10,0
Error in line 14: ZCQrdLa A228 39,9
Error in line 25: ZCQrdLa A203 24,7
Error in line 33: Lh3 A228 18,0
Error in line 31: ZCQrdLa S176 53,6
Error in line 38: ZCQrdLa A228 59,2
